1.10.0/_sources/reference_cmd/dipy_fit_dki.rst.txt
.. dipy_fit_dki:

============
dipy_fit_dki
============

Synopsis
--------

Workflow for Diffusion Kurtosis reconstruction and for computing DKI metrics.

Performs a DKI reconstruction :footcite:p:`Tabesh2011`, :footcite:p:`Jensen2005` on the files by 'globing' ``input_files`` and saves the DKI metrics in a directory specified by ``out_dir``.

Usage
-----

.. code-block:: bash

    dipy_fit_dki [OPTIONS] input_files bvalues_files bvectors_files mask_files

Input Parameters
----------------

* ``input_files``

  Path to the input volumes. This path may contain wildcards to
  process multiple inputs at once.

* ``bvalues_files``

  Path to the bvalues files. This path may contain wildcards to use
  multiple bvalues files at once.

* ``bvectors_files``

  Path to the bvalues files. This path may contain wildcards to use
  multiple bvalues files at once.

* ``mask_files``

  Path to the input masks. This path may contain wildcards to use
  multiple masks at once. (default: No mask used)

General Options
---------------

* ``--fit_method``

  can be one of the following:
  'OLS' or 'ULLS' for ordinary least squares
  'WLS' or 'UWLLS' for weighted ordinary least squares

* ``--b0_threshold``

  Threshold used to find b0 volumes.

* ``--sigma``

  An estimate of the variance. :footcite:t:`Chang2005` recommend to
  use 1.5267 * std(background_noise), where background_noise is
  estimated from some part of the image known to contain no signal
  (only noise)

* ``--save_metrics``

  List of metrics to save.
  Possible values: fa, ga, rgb, md, ad, rd, mode, tensor, evec, eval

* ``--extract_pam_values``

  Save or not to save pam volumes as single nifti files.

* ``--npeaks``

  Number of peaks to fit in each voxel.

Output Options
--------------

* ``--out_dir``

  Output directory. (default current directory)

* ``--out_dt_tensor``

  Name of the tensors volume to be saved.

* ``--out_dk_tensor``

  Name of the tensors volume to be saved.

* ``--out_fa``

  Name of the fractional anisotropy volume to be saved.

* ``--out_ga``

  Name of the geodesic anisotropy volume to be saved.

* ``--out_rgb``

  Name of the color fa volume to be saved.

* ``--out_md``

  Name of the mean diffusivity volume to be saved.

* ``--out_ad``

  Name of the axial diffusivity volume to be saved.

* ``--out_rd``

  Name of the radial diffusivity volume to be saved.

* ``--out_mode``

  Name of the mode volume to be saved.

* ``--out_evec``

  Name of the eigenvectors volume to be saved.

* ``--out_eval``

  Name of the eigenvalues to be saved.

* ``--out_mk``

  Name of the mean kurtosis to be saved.

* ``--out_ak``

  Name of the axial kurtosis to be saved.

* ``--out_rk``

  Name of the radial kurtosis to be saved.

* ``--out_pam``

  Name of the peaks volume to be saved.

* ``--out_peaks_dir``

  Name of the peaks directions volume to be saved.

* ``--out_peaks_values``

  Name of the peaks values volume to be saved.

* ``--out_peaks_indices``

  Name of the peaks indices volume to be saved.

* ``--out_sphere``

  Sphere vertices name to be saved.

References
----------

.. footbibliography::

Garyfallidis, E., M. Brett, B. Amirbekian, A. Rokem, S. Van Der Walt, M. Descoteaux, and I. Nimmo-Smith. Dipy, a library for the analysis of diffusion MRI data. Frontiers in Neuroinformatics, 1-18, 2014.